--- a/public/css/global.css
+++ b/public/css/global.css
@@ -637,28 +637,29 @@ table.calendar td.day.today.has-events {
   background: #999;
 }
 
-/* line 309, ../sass/global.scss */
-.shoutbox {
-  padding: 0;
-  font-size: 10pt;
-}
-/* line 312, ../sass/global.scss */
-.shoutbox a.at_reply {
+/* line 311, ../sass/global.scss */
+#shoutbox a.at_reply {
   color: #ccc;
   text-decoration: none;
 }
-/* line 316, ../sass/global.scss */
-.shoutbox table.shouts th.date {
+/* line 313, ../sass/global.scss */
+#shoutbox th.date {
   background: #444;
   color: #eee;
   text-align: right;
   padding: 3px 8px;
   font-variant: small-caps;
-  border-top: 1px solid #333;
-  border-bottom: 1px solid #333;
 }
 
-/* line 323, ../sass/global.scss */
+/* line 322, ../sass/global.scss */
+#embed #shoutbox tbody {
+  display: block;
+  font-size: 10pt;
+  height: 200px;
+  overflow: auto;
+}
+
+/* line 330, ../sass/global.scss */
 .attachment-box {
   margin: 15px 0 0;
   padding: 8px 0;
@@ -666,7 +667,7 @@ table.calendar td.day.today.has-events {
   border-bottom: 1px solid #999;
 }
 
-/* line 328, ../sass/global.scss */
+/* line 335, ../sass/global.scss */
 .userbox {
   padding: 0;
   position: absolute;
@@ -676,7 +677,7 @@ table.calendar td.day.today.has-events {
   background: #666;
   border: 1px solid #333;
 }
-/* line 332, ../sass/global.scss */
+/* line 339, ../sass/global.scss */
 .userbox a {
   display: block;
   width: 178px;
@@ -686,13 +687,13 @@ table.calendar td.day.today.has-events {
   border: 1px solid #666;
   color: #ddd;
 }
-/* line 335, ../sass/global.scss */
+/* line 342, ../sass/global.scss */
 .userbox a:hover {
   background: #888;
   border: 1px solid #333;
   color: #fff;
 }
-/* line 337, ../sass/global.scss */
+/* line 344, ../sass/global.scss */
 .userbox hr {
   width: 80%;
   border: 0;
@@ -701,7 +702,7 @@ table.calendar td.day.today.has-events {
   background: #ccc;
 }
 
-/* line 342, ../sass/global.scss */
+/* line 349, ../sass/global.scss */
 .usermenu, .userhov, .usersel {
   padding: 3px 10px;
   height: 28px;
@@ -713,24 +714,24 @@ table.calendar td.day.today.has-events {
   z-index: 10;
 }
 
-/* line 346, ../sass/global.scss */
+/* line 353, ../sass/global.scss */
 .usermenu {
   border: 1px solid #666;
 }
 
-/* line 347, ../sass/global.scss */
+/* line 354, ../sass/global.scss */
 .userhov, .usermenu:hover {
   background: #888;
   border: 1px solid #333;
 }
 
-/* line 348, ../sass/global.scss */
+/* line 355, ../sass/global.scss */
 .usersel, .usermenu:active {
   background: #666;
   border: 1px solid #333;
 }
 
-/* line 350, ../sass/global.scss */
+/* line 357, ../sass/global.scss */
 a.scaled {
   text-decoration: none;
   display: block;
@@ -741,32 +742,32 @@ a.scaled {
   font-size: 10pt;
 }
 
-/* line 355, ../sass/global.scss */
+/* line 362, ../sass/global.scss */
 .quote {
   margin: 5px 0 5px 20px;
   border: 1px solid #333;
   background: #777;
   padding: 0;
 }
-/* line 357, ../sass/global.scss */
+/* line 364, ../sass/global.scss */
 .quote .author {
   margin: 0;
   padding: 5px;
   border-bottom: 1px solid #333;
   background: #555;
 }
-/* line 359, ../sass/global.scss */
+/* line 366, ../sass/global.scss */
 .quote .author img {
   margin-left: 10px;
   vertical-align: middle;
 }
-/* line 361, ../sass/global.scss */
+/* line 368, ../sass/global.scss */
 .quote .content {
   margin: 0;
   padding: 5px 15px 5px 5px;
 }
 
-/* line 364, ../sass/global.scss */
+/* line 371, ../sass/global.scss */
 .spoiler-alert {
   color: #900;
   background: #777;
@@ -775,13 +776,13 @@ a.scaled {
   text-decoration: none;
   padding: 2px 5px;
 }
-/* line 367, ../sass/global.scss */
+/* line 374, ../sass/global.scss */
 .spoiler-alert:hover {
   color: #060;
   border: 2px dashed #060;
 }
 
-/* line 369, ../sass/global.scss */
+/* line 376, ../sass/global.scss */
 .spoiler {
   display: none;
   border: 2px dashed #900;
@@ -789,7 +790,7 @@ a.scaled {
   padding: 5px;
 }
 
-/* line 373, ../sass/global.scss */
+/* line 380, ../sass/global.scss */
 pre.code {
   font-size: 10pt;
   font-family: "Courier New",mono;
@@ -802,18 +803,18 @@ pre.code {
   overflow-x: auto;
 }
 
-/* line 379, ../sass/global.scss */
+/* line 386, ../sass/global.scss */
 .sig {
   border-top: 1px dotted #ccc;
   color: #ccc;
   font-size: 10pt;
 }
-/* line 383, ../sass/global.scss */
+/* line 390, ../sass/global.scss */
 .sig object {
   display: none;
 }
 
-/* line 386, ../sass/global.scss */
+/* line 393, ../sass/global.scss */
 .thumbnail-selector {
   float: left;
   width: 500px;
@@ -826,130 +827,130 @@ pre.code {
   line-height: 0;
   padding: 10px 5px;
 }
-/* line 389, ../sass/global.scss */
+/* line 396, ../sass/global.scss */
 .thumbnail-selector .thumbnail {
   margin: 0 3px;
   height: 150px;
   display: inline-block;
 }
-/* line 391, ../sass/global.scss */
+/* line 398, ../sass/global.scss */
 .thumbnail-selector .thumbnail div {
   margin: auto;
   text-align: center;
   padding: 2px;
   font-size: 0;
 }
-/* line 393, ../sass/global.scss */
+/* line 400, ../sass/global.scss */
 .thumbnail-selector .thumbnail div.sel {
   padding: 0;
   border: 2px solid #00f;
 }
 
-/* line 399, ../sass/global.scss */
+/* line 406, ../sass/global.scss */
 body.mobile h2 {
   font-size: 16pt;
   font-variant: small-caps;
   margin: 2px 0 4px 0;
 }
-/* line 401, ../sass/global.scss */
+/* line 408, ../sass/global.scss */
 body.mobile h2 a {
   color: #fff;
   text-decoration: none;
 }
-/* line 405, ../sass/global.scss */
+/* line 412, ../sass/global.scss */
 body.mobile .table th.icon, body.mobile .table td.icon {
   width: 30px;
 }
-/* line 406, ../sass/global.scss */
+/* line 413, ../sass/global.scss */
 body.mobile .table th.icon.wide, body.mobile .table td.icon.wide {
   width: 35px;
 }
-/* line 409, ../sass/global.scss */
+/* line 416, ../sass/global.scss */
 body.mobile .album {
   width: 100%;
   height: 97px;
 }
-/* line 411, ../sass/global.scss */
+/* line 418, ../sass/global.scss */
 body.mobile .album .photo {
   width: 122px;
   height: 97px;
 }
-/* line 413, ../sass/global.scss */
+/* line 420, ../sass/global.scss */
 body.mobile .album .photo img {
   max-width: 100px;
   max-height: 75px;
 }
-/* line 415, ../sass/global.scss */
+/* line 422, ../sass/global.scss */
 body.mobile .album .description {
   padding-left: 130px;
 }
-/* line 418, ../sass/global.scss */
+/* line 425, ../sass/global.scss */
 body.mobile footer {
   border-left: 0;
   border-right: 0;
   width: 100%;
   top: 0;
 }
-/* line 421, ../sass/global.scss */
+/* line 428, ../sass/global.scss */
 body.mobile footer #social-media {
   float: none;
   margin: 0 0 10px;
 }
-/* line 423, ../sass/global.scss */
+/* line 430, ../sass/global.scss */
 body.mobile footer #social-media img {
   margin: 0;
 }
-/* line 424, ../sass/global.scss */
+/* line 431, ../sass/global.scss */
 body.mobile footer #social-media a {
   margin: 0 3px;
 }
-/* line 428, ../sass/global.scss */
+/* line 435, ../sass/global.scss */
 body.mobile div.scaled {
   display: none;
 }
-/* line 429, ../sass/global.scss */
+/* line 436, ../sass/global.scss */
 body.mobile img.post-image {
   max-width: 100%;
   height: auto;
 }
 
 @media print {
-  /* line 433, ../sass/global.scss */
+  /* line 440, ../sass/global.scss */
   a {
     color: #369 !important;
     text-decoration: none;
   }
 
-  /* line 434, ../sass/global.scss */
+  /* line 441, ../sass/global.scss */
   nav, #babynav, header, footer, #quick-reply, .jumpbox, .btn {
     display: none;
   }
 
-  /* line 437, ../sass/global.scss */
+  /* line 444, ../sass/global.scss */
   header {
     height: auto;
   }
 
-  /* line 438, ../sass/global.scss */
+  /* line 445, ../sass/global.scss */
   footer {
     top: 0;
   }
 
-  /* line 440, ../sass/global.scss */
+  /* line 447, ../sass/global.scss */
   .welcome .table-header {
     border-top: 1px solid #000;
   }
-  /* line 441, ../sass/global.scss */
+  /* line 448, ../sass/global.scss */
   .welcome .header {
     color: #000;
   }
 
-  /* line 444, ../sass/global.scss */
+  /* line 451, ../sass/global.scss */
   table.table2 th {
     color: #000;
   }
 
-  /* line 446, ../sass/global.scss */
+  /* line 453, ../sass/global.scss */
   img {
     max-width: 100%;
     height: auto;
