--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -306,17 +306,24 @@ table.calendar {
 	}
 }
 
-.shoutbox {
-	padding:0; font-size:10pt;
+#shoutbox {
 	a {
 		&.at_reply { color:#ccc; text-decoration:none; }
 	}
-	
-	table.shouts {
-		th.date {
-			background:$header-bg; color:#eee; text-align:right; padding:3px 8px;
-			font-variant:small-caps; border-top:1px solid #333; border-bottom:1px solid #333;
-		}
+	th.date {
+		background: $header-bg;
+		color: #eee;
+		text-align: right;
+		padding: 3px 8px;
+		font-variant: small-caps;
+	}
+}
+#embed #shoutbox {
+	tbody {
+		display: block;
+		font-size: 10pt;
+		height: 200px;
+		overflow: auto;
 	}
 }
 
