--- a/public/sass/global.scss
+++ b/public/sass/global.scss
@@ -42,6 +42,10 @@ small { font-size:8pt; }
 body {
 	padding-top: 50px;
 	position: relative;
+
+	&.minimal {
+		padding-top: 0;
+	}
 }
 img { border:0; }
 ul, ol { margin:6px 20px; padding:0; }
